--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
+    "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
     "music-metadata": "^8.1.3",
     "music-metadata-browser": "^2.5.9",
+    "pinia": "^2.0.30",
     "vue-router": "4"
   },
   "devDependencies": {
