--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "author": "example.com",
   "homepage": "https://www.electronjs.org",
   "scripts": {
-    "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "build": "electron-vite build",
@@ -34,8 +32,11 @@
     "@electron-toolkit/utils": "^1.0.2",
     "dexie": "^3.2.3",
     "electron-updater": "^5.3.0",
+    "express": "^4.18.2",
+    "ip": "^1.1.8",
     "music-metadata-browser": "^2.5.9",
     "pinia": "^2.0.30",
+    "qrcode": "^1.5.1",
     "vue-router": "4"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "pug": "^3.0.2",
     "stylus": "^0.59.0",
     "vite": "^4.0.4",
+    "vite-plugin-eslint": "^1.8.1",
     "vue": "^3.2.45"
   }
 }
