--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "dev-web": "npm run dev-web --prefix=./controller-web",
+    "build-web": "npm run build --prefix=./controller-web",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build --prefix=./controller-web && npm run build && electron-builder --win --config",
