--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "纸境工作室",
   "homepage": "https://www.electronjs.org",
   "scripts": {
+    "prepare": "npm install && npm build-web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "dev-web": "npm run dev-web --prefix=./controller-web",
