--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "author": "纸境工作室",
   "homepage": "https://www.electronjs.org",
   "scripts": {
-    "prepare": "npm install && npm build-web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "dev-web": "npm run dev-web --prefix=./controller-web",
+    "prepare-start": "pnpm install && pnpm install --prefix=./controller-web && pnpm install-tools && npm build-web",
     "build-web": "npm run build --prefix=./controller-web",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build --prefix=./controller-web && npm run build && electron-builder --win --config",
     "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config"
+    "build:linux": "npm run build && electron-builder --linux --config",
+    "install-tools": "node ./tools/prepare.mjs",
+    "build-tools": "webpack --config ./tools/webpack.config.mjs"
   },
   "build": {
     "productName": "limit 音乐",
@@ -33,12 +35,12 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
+    "@purtuga/esm-webpack-plugin": "^1.5.0",
     "body-parser": "^1.20.1",
     "dexie": "^3.2.3",
     "electron-updater": "^5.3.0",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "ip": "^1.1.8",
     "music-metadata-browser": "^2.5.9",
     "pinia": "^2.0.30",
     "qrcode": "^1.5.1",
@@ -65,6 +67,8 @@
     "stylus": "^0.59.0",
     "vite": "^4.0.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
