--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "scripts": {
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "dev-web": "npm run dev-web --prefix=./controller-web",
-    "prepare-start": "pnpm install && pnpm install --prefix=./controller-web && pnpm install-tools && npm build-web",
-    "build-web": "npm run build --prefix=./controller-web",
+    "dev-web": "pnpm dev-web --prefix=./controller-web",
+    "prepare-start": "pnpm install && pnpm install --prefix=./controller-web && pnpm install-tools && pnpm build-web",
+    "build-web": "pnpm build --prefix=./controller-web",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build --prefix=./controller-web && npm run build && electron-builder --win --config",
-    "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config",
+    "build:win": "pnpm build --prefix=./controller-web && pnpm build && electron-builder --win --config",
+    "build:mac": "pnpm build && electron-builder --mac --config",
+    "build:linux": "pnpm build && electron-builder --linux --config",
     "install-tools": "node ./tools/prepare.mjs",
     "build-tools": "webpack --config ./tools/webpack.config.mjs"
   },
