--- a/package.json
+++ b/package.json
@@ -35,39 +35,39 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
-    "body-parser": "^1.20.1",
-    "dexie": "^3.2.3",
+    "body-parser": "^1.20.2",
+    "dexie": "^3.2.4",
     "electron-updater": "^5.3.0",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "music-metadata-browser": "^2.5.9",
-    "pinia": "^2.0.30",
-    "qrcode": "^1.5.1",
-    "socket.io": "^4.6.0",
-    "vue-router": "4"
+    "music-metadata-browser": "^2.5.10",
+    "pinia": "^2.1.6",
+    "qrcode": "^1.5.3",
+    "socket.io": "^4.7.2",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@electron/notarize": "^1.2.3",
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "electron": "^21.3.3",
+    "@electron/notarize": "^1.2.4",
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "electron": "^21.4.4",
     "electron-builder": "^23.6.0",
-    "electron-vite": "^1.0.17",
-    "eslint": "^8.31.0",
-    "eslint-config-standard": "^17.0.0",
+    "electron-vite": "^1.0.27",
+    "eslint": "^8.46.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.8.0",
-    "prettier": "^2.8.2",
+    "eslint-plugin-vue": "^9.16.1",
+    "prettier": "^2.8.8",
     "pug": "^3.0.2",
     "stylus": "^0.59.0",
-    "vite": "^4.0.4",
+    "vite": "^4.4.9",
     "vite-plugin-eslint": "^1.8.1",
-    "vue": "^3.2.45",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "vue": "^3.3.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
